Add Sentinel Processing API support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
 
+# Sentinel Processing API
+sentinel-auth.url=https://identity.dataspace.copernicus.eu/auth/realms/CDSE/protocol/openid-connect/token
+sentinel-auth.client-id=CLIENTID
+sentinel-auth.client-secret=SECRET
+
+# STAC
 stac-client.url=https://earth-search.aws.element84.com/v1/collections/sentinel-2-l2a/items?
 
+# ODATA
 odata-client.url=https://catalogue.dataspace.copernicus.eu/odata/v1/Products
 odata-download.url=https://zipper.dataspace.copernicus.eu/odata/v1/Products
 
 odata-auth.url=https://identity.dataspace.copernicus.eu/auth/realms/CDSE/protocol/openid-connect/token
-TODO: Set credentials from env vars
+
+#TODO: Set credentials from env vars
 odata-auth.username=USERNAME
 odata-auth.password=PASSWORD
+
